# zenoh_swest26_trial

./: .gitmodules  README.md  docker-compose.yml
docker/: Dockerfile  README.md
docs/: 00preliminary.md  01docker.md  1lang.md  2iot.md  Dockerfile
zenoh_elixir/: .gitignore  README.md  mix.exs
zenoh_elixir/lib/: zenoh_elixir.ex
zenoh_elixir/lib/zenoh_elixir/: pub.ex  sub.ex
zenoh_elixir/test/: zenoh_elixir_test.exs
zenoh_native/: Cargo.toml
zenoh_pico/: platformio.ini
zenoh_pico/src/: main.cpp
zenoh_python/: pub.py  sub.py
