[package]
name = "zenoh_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.10.1-rc"
async-std = "1"
futures = "0.3"
ctrlc-handler = "0.1.2"

[[bin]]
name = "pub"
path = "src/bin/pub.rs"

[[bin]]
name = "sub"
path = "src/bin/sub.rs"
